--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,8 @@
 import Main from "../layouts/Main.astro";
 ---
 
-<Main title="Home">
-	<h1>Homepage</h1>
+<Main title="woops!!!">
+	<h1>
+		woops! 404
+	</h1>
 </Main>
