--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,12 +9,13 @@ body {
 	min-height: 100%;
 	font-size: 18px;
 	font-family: var(--font-family-sans);
-	font-weight: var(--font-weight-normal);
+	font-weight: var(--font-weight-medium);
 	font-style: normal;
 	line-height: 1.0;
-	letter-spacing: normal;
+	color: var(--color-text-normal);
 	scroll-behavior: smooth;
-	background: var(--color-background);
+	scroll-padding-block-start: calc(2.875rem + 1.5rem);
+	background: var(--color-background-normal);
 	@media (max-width: 384px) {
 		font-size: 16px;
 	}
@@ -29,14 +30,14 @@ body {
 	font-weight: inherit;
 	font-style: inherit;
 	line-height: inherit;
-	color: var(--color-text);
-	// font-synthesis: none;
+	color: inherit;
+	font-synthesis: none;
 	text-align: inherit;
 	text-decoration: inherit;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	// text-rendering: geometricPrecision;
+	text-rendering: optimizeLegibility;
 	-webkit-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
@@ -46,163 +47,153 @@ body {
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	touch-action: manipulation;
-	// margin: 0;
-	// padding: 0;
-	// font-size: inherit;
-	// font-family: inherit;
-	// font-weight: inherit;
-	// font-style: inherit;
-	// line-height: inherit;
-	// color: var(--colour-text);
-	// font-synthesis: none;
-	// text-align: inherit;
-	// text-decoration: inherit;
-	// -webkit-box-sizing: border-box;
-	// -moz-box-sizing: border-box;
-	// box-sizing: border-box;
-	// -webkit-text-size-adjust: none;
-	// -moz-text-size-adjust: none;
-	// -ms-text-size-adjust: none;
-	// text-size-adjust: none;
-	// text-rendering: geometricPrecision;
-	// -webkit-font-smoothing: antialiased;
-	// word-break: normal;
-	// overflow-wrap: break-word;
-	// touch-action: manipulation;
 }
 :root {
-	--color-1: #101010;
+	// color palette
+	--color-1: #000000; // was: #191f45 // was: #002741 // was: #101010
 	--color-2: #ffffff;
-	--color-3: #999999;
+	--color-3: #767676; // was : #000000 // was: #999999
 	--color-4: #cccccc;
-}
-:root {
-	--color-text: var(--color-1);
-	--color-background: var(--color-2);
-	// --font-family-sans: "Neue Haas Grotesk Display Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-	// --font-family-sans: "Neue Montreal", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	--color-5: #f5f5f5;
+	--color-6: lightyellow;
+	// color-text
+	--color-text-normal: var(--color-1);
+	--color-text-light: var(--color-3);
+	--color-text-x-light: var(--color-4);
+	--color-text-xx-light: var(--color-5);
+	// color-background
+	--color-background-normal: var(--color-2);
+	--color-background-distinct: var(--color-5);
+	--color-background-special: var(--color-6);
+	// color-link
+	--color-link-hover: var(--color-text-light);
+	--color-link-normal: var(--color-text-normal);
+	--color-link-underline: var(--color-text-x-light);
+	// font-family
 	--font-family-sans: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 	--font-family-serif: "Times", "Times New Roman", serif;
-	--font-weight-normal: 400;
+	// font-weight
 	--font-weight-bold: 700;
-	--font-size-large: 2.5rem;
-	--font-size-big: 1.25rem;
-	--font-size-normal: 1rem;
-	--font-size-medium: 0.875rem;
-	--font-size-small: 0.75rem;
+	--font-weight-medium: 400;
+	--font-weight-light: 300;
+	// font-size
+	--font-size-x-large: 2rem;
+	--font-size-large: 1.25rem;
+	--font-size-medium: 1rem;
+	--font-size-small: 0.875rem;
+	--font-size-x-small: 0.75rem;
 	@media (max-width: 384px) {
-		--font-size-small: var(--font-size-medium);
+		--font-size-x-small: var(--font-size-small);
 	}
-}
-figure {
-	img {
+} 
+// color
+.cn { color: var(--color-text-normal); }
+.clt { color: var(--color-text-light); }
+.cxlt { color: var(--color-text-x-light); }
+.cxxlt { color: var(--color-text-xx-light); }
+.ci { color: var(--color-background-normal); }
+// background
+.bgn { background: var(--color-background-normal); }
+.bgd { background: var(--color-background-distinct); }
+.bgs { background: var(--color-background-special); }
+.bgi { background: var(--color-text-normal); }
+// font-family
+.ffsans { font-family: var(--font-family-sans); }
+.ffserif { font-family: var(--font-family-serif); }
+.ffmono { font-family: monospace; }
+// font-weight
+.fwb { font-weight: var(--font-weight-bold); }
+.fwm { font-weight: var(--font-weight-medium); }
+.fwl { font-weight: var(--font-weight-light); }
+// font-size
+.fsxl { font-size: var(--font-size-x-large); }
+.fsl { font-size: var(--font-size-large); }
+.fsm { font-size: var(--font-size-medium); }
+.fss { font-size: var(--font-size-small); }
+.fsxs { font-size: var(--font-size-x-small); }
+// font-style
+.fsi { font-style: italic; }
+// line-height
+.lhn { line-height: 1; }
+.lhl { line-height: 1.15; }
+.lhxl { line-height: 1.3; }
+// letter-spacing
+.lss { letter-spacing: -0.015em; }
+.lsn { letter-spacing: normal; }
+.lsl { letter-spacing: 0.015em; }
+// text-deocration
+.tdlt { text-decoration: line-through; }
+.tdul { text-decoration: underline; }
+// border
+.bbsn { border-block-start: 1px solid var(--color-text-normal); }
+.bben { border-block-end: 1px solid var(--color-text-normal); }
+.bisn { border-inline-start: 1px solid var(--color-text-normal); }
+.bien { border-inline-end: 1px solid var(--color-text-normal); }
+.bbslt { border-block-start: 1px solid var(--color-text-light); }
+.bbelt { border-block-end: 1px solid var(--color-text-light); }
+.bislt { border-inline-start: 1px solid var(--color-text-light); }
+.bielt { border-inline-end: 1px solid var(--color-text-light); }
+.bbsxlt { border-block-start: 1px solid var(--color-text-x-light); }
+.bbexlt { border-block-end: 1px solid var(--color-text-x-light); }
+.bisxlt { border-inline-start: 1px solid var(--color-text-x-light); }
+.biexlt { border-inline-end: 1px solid var(--color-text-x-light); }
+.bbsxxlt { border-block-start: 1px solid var(--color-text-xx-light); }
+.bbexxlt { border-block-end: 1px solid var(--color-text-xx-light); }
+.bisxxlt { border-inline-start: 1px solid var(--color-text-xx-light); }
+.biexxlt { border-inline-end: 1px solid var(--color-text-xx-light); }
+// misc
+[hidden], .dn { display: none; }
+.vh { clip: rect(0 0 0 0);  clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; white-space: nowrap;  width: 1px; }
+.ht { transition: color 0.125s; @media (any-hover: hover) { &:hover { color: var(--color-link-hover); } } }
+.hi { img { filter: grayscale(1); transition: filter 0.125s; } @media (any-hover: hover) { &:hover img { filter: grayscale(0); } } }
+.link { background-image: linear-gradient(to bottom, var(--color-link-underline), var(--color-link-underline)); background-size: 1px 2px; background-repeat: repeat-x; background-position: 0 100%; }
+.sbn { scrollbar-width: none; /* Firefox */ -ms-overflow-style: none;  /* Internet Explorer 10+ */ }
+.sbn::-webkit-scrollbar { width: 0; height: 0; } /* WebKit */
+.ln { list-style: none; }
+.toe { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+.ttuc { text-transform: uppercase; }
+// universal
+a[aria-current] { text-decoration: underline; text-decoration-thickness: 2px; text-decoration-color: var(--color-text-x-light); }
+img { display: block; width: 100%; height: auto; }
+
+
+//
+.radio,
+.checkbox {
+	& {
 		display: block;
 		width: 100%;
-		height: auto;
+		cursor: pointer;
 	}
-	figcaption {
-		margin-block-start: 0.5rem;
-		font-size: var(--font-size-small);
-		--color-text: var(--color-3);
+	&::before {
+		content: "";
+		display: inline-block;
+		width: 0.75rem;
+		height: 0.75rem;
+		line-height: 0.75;
+		margin-right: 0.25rem;
+		margin-bottom: -1px;
+		text-align: center;
+		font-family: monospace;
+		color: var(--color-text-x-light);
 	}
-}
-.rich-text {
-	line-height: 1.3;
-	& h3 {
-		font-size: var(--font-size-big);
-		line-height: 1;
-		font-weight: var(--font-weight-bold);
+	&.radio::before {
+		content: none;
 	}
-	& blockquote {
-		font-size: var(--font-size-medium);
-		margin-inline: 1.5rem;
-		font-family: var(--font-family-serif);
-	}
-	& .note {
-		font-size: var(--font-size-small);
-		--color-text: var(--color-3);
-	}
-	& strong {
-		font-weight: var(--font-weight-bold);
-	}
-	& em {
-		font-style: italic;
-	}
-	& del {
-		text-decoration: line-through;
-	}
-	& sup {
-		font-size: 0.61875em;
-	}
-	& li {
-		padding-inline-start: 0.5rem;
-		margin-inline-start: 1rem;
-	}
-	& a {
-		background-image: linear-gradient(to bottom, var(--color-4), var(--color-4));
-		background-size: 1px 1px;
-		background-repeat: repeat-x;
-		background-position: 0 97.5%;
+	&.checkbox::before {
+		content: "+" / "";
 	}
 }
-.rich-text p + p,
-.rich-text h3 + p,
-.rich-text blockquote + p,
-.rich-text .note + p,
-.rich-text figure + p,
-.rich-text ul + p,
-.rich-text ol + p,
-.rich-text p + blockquote,
-.rich-text h3 + blockquote,
-.rich-text blockquote + blockquote,
-.rich-text .note + blockquote,
-.rich-text figure + blockquote,
-.rich-text ul + blockquote,
-.rich-text ol + blockquote,
-.rich-text p + h3,
-.rich-text h3 + h3,
-.rich-text blockquote + h3,
-.rich-text .note + h3,
-.rich-text figure + h3,
-.rich-text ul + h3,
-.rich-text ol + h3,
-.rich-text p + .note,
-.rich-text h3 + .note,
-.rich-text blockquote + .note,
-.rich-text .note + .note,
-.rich-text figure + .note,
-.rich-text ul + .note,
-.rich-text ol + .note,
-.rich-text p + figure,
-.rich-text h3 + figure,
-.rich-text blockquote + figure,
-.rich-text .note + figure,
-.rich-text figure + figure,
-.rich-text ul + figure,
-.rich-text ol + figure,
-.rich-text p + ul,
-.rich-text h3 + ul,
-.rich-text blockquote + ul,
-.rich-text .note + ul,
-.rich-text figure + ul,
-.rich-text ul + ul,
-.rich-text ol + ul,
-.rich-text p + ol,
-.rich-text h3 + ol,
-.rich-text blockquote + ol,
-.rich-text .note + ol,
-.rich-text figure + ol,
-.rich-text ul + ol,
-.rich-text ol + ol {
-	margin-block-start: 0.5rem;
-}
-.link,
-.rich-text a {
-	--color-text: var(--color-1);
-	transition: color 0.125s;
-	@media (any-hover: hover) {
-		&:hover {
-			--color-text: var(--color-3);
-		}
+input[type="radio"],
+input[type="checkbox"] {
+	&:checked + .radio::before,
+	&:checked + .checkbox::before {
+		color: var(--color-text-normal);
+	}
+	&[type="radio"]:checked + .radio::before {
+		content: "✓" / "";
+	}
+	&[type="checkbox"]:checked + .checkbox::before {
+		content: "×" / "";
 	}
 }
