--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -32,3 +32,12 @@ const src =
 	<source srcset={srcset} type="image/webp" />
 	<img loading="lazy" src={src} alt={alt} {...rest} />
 </picture>
+
+<style lang="scss">
+	img {
+		display: block;
+		width: 100%;
+		height: auto;
+		font-style: italic;
+	}
+</style>
