--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,199 +1,78 @@
 @charset "UTF-8";
 
-html,
-body {
-	position: relative;
-	top: 0;
-	left: 0;
-	width: 100%;
-	min-height: 100%;
-	font-size: 18px;
-	font-family: var(--font-family-sans);
-	font-weight: var(--font-weight-medium);
-	font-style: normal;
-	line-height: 1.0;
-	color: var(--color-text-normal);
-	scroll-behavior: smooth;
-	scroll-padding-block-start: calc(2.875rem + 1.5rem);
-	background: var(--color-background-normal);
-	@media (max-width: 384px) {
-		font-size: 16px;
-	}
-}
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-	font-style: inherit;
-	line-height: inherit;
-	color: inherit;
-	font-synthesis: none;
-	text-align: inherit;
-	text-decoration: inherit;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	text-rendering: optimizeLegibility;
-	-webkit-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
-	text-size-adjust: 100%;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	touch-action: manipulation;
-}
 :root {
-	// color palette
-	--color-1: #000000; // was: #191f45 // was: #002741 // was: #101010
-	--color-2: #ffffff;
-	--color-3: #767676; // was : #000000 // was: #999999
-	--color-4: #cccccc;
-	--color-5: #f5f5f5;
-	--color-6: lightyellow;
-	// color-text
-	--color-text-normal: var(--color-1);
-	--color-text-light: var(--color-3);
-	--color-text-x-light: var(--color-4);
-	--color-text-xx-light: var(--color-5);
-	// color-background
-	--color-background-normal: var(--color-2);
-	--color-background-distinct: var(--color-5);
-	--color-background-special: var(--color-6);
-	// color-link
-	--color-link-hover: var(--color-text-light);
-	--color-link-normal: var(--color-text-normal);
-	--color-link-underline: var(--color-text-x-light);
+	// color
+	--color-1: #191f45; // darkest // #191f45
+	--color-2: #5f6368; // dark
+	--color-3: #94979b; // medium-dark
+	--color-4: #dadce0; // medium
+	--color-5: #e8e9eb; // medium-light
+	--color-6: #f8f8f8; // light
+	--color-7: #ffffff; // lightest
 	// font-family
 	--font-family-sans: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 	--font-family-serif: "Times", "Times New Roman", serif;
+	--font-family-mono: monospace;
 	// font-weight
 	--font-weight-bold: 700;
 	--font-weight-medium: 400;
 	--font-weight-light: 300;
 	// font-size
-	--font-size-x-large: 2rem;
-	--font-size-large: 1.25rem;
-	--font-size-medium: 1rem;
-	--font-size-small: 0.875rem;
-	--font-size-x-small: 0.75rem;
-	@media (max-width: 384px) {
-		--font-size-x-small: var(--font-size-small);
-	}
-} 
-// color
-.cn { color: var(--color-text-normal); }
-.clt { color: var(--color-text-light); }
-.cxlt { color: var(--color-text-x-light); }
-.cxxlt { color: var(--color-text-xx-light); }
-.ci { color: var(--color-background-normal); }
-// background
-.bgn { background: var(--color-background-normal); }
-.bgd { background: var(--color-background-distinct); }
-.bgs { background: var(--color-background-special); }
-.bgi { background: var(--color-text-normal); }
-// font-family
-.ffsans { font-family: var(--font-family-sans); }
-.ffserif { font-family: var(--font-family-serif); }
-.ffmono { font-family: monospace; }
-// font-weight
-.fwb { font-weight: var(--font-weight-bold); }
-.fwm { font-weight: var(--font-weight-medium); }
-.fwl { font-weight: var(--font-weight-light); }
-// font-size
-.fsxl { font-size: var(--font-size-x-large); }
-.fsl { font-size: var(--font-size-large); }
-.fsm { font-size: var(--font-size-medium); }
-.fss { font-size: var(--font-size-small); }
-.fsxs { font-size: var(--font-size-x-small); }
-// font-style
-.fsi { font-style: italic; }
-// line-height
-.lhn { line-height: 1; }
-.lhl { line-height: 1.15; }
-.lhxl { line-height: 1.3; }
-// letter-spacing
-.lss { letter-spacing: -0.015em; }
-.lsn { letter-spacing: normal; }
-.lsl { letter-spacing: 0.015em; }
-// text-deocration
-.tdlt { text-decoration: line-through; }
-.tdul { text-decoration: underline; }
-// border
-.bbsn { border-block-start: 1px solid var(--color-text-normal); }
-.bben { border-block-end: 1px solid var(--color-text-normal); }
-.bisn { border-inline-start: 1px solid var(--color-text-normal); }
-.bien { border-inline-end: 1px solid var(--color-text-normal); }
-.bbslt { border-block-start: 1px solid var(--color-text-light); }
-.bbelt { border-block-end: 1px solid var(--color-text-light); }
-.bislt { border-inline-start: 1px solid var(--color-text-light); }
-.bielt { border-inline-end: 1px solid var(--color-text-light); }
-.bbsxlt { border-block-start: 1px solid var(--color-text-x-light); }
-.bbexlt { border-block-end: 1px solid var(--color-text-x-light); }
-.bisxlt { border-inline-start: 1px solid var(--color-text-x-light); }
-.biexlt { border-inline-end: 1px solid var(--color-text-x-light); }
-.bbsxxlt { border-block-start: 1px solid var(--color-text-xx-light); }
-.bbexxlt { border-block-end: 1px solid var(--color-text-xx-light); }
-.bisxxlt { border-inline-start: 1px solid var(--color-text-xx-light); }
-.biexxlt { border-inline-end: 1px solid var(--color-text-xx-light); }
+	--font-size-large: 1rem; // 18px
+	--font-size-medium: 0.8888888889rem; // 16px
+	--font-size-small: 0.7222222222rem; // 13px
+	// line-height
+	--line-height-large: 1.3;
+	--line-height-medium: 1.15;
+	--line-height-small: 1;
+	// letter-spacing
+	--letter-spacing-large: 0.015em;
+	--letter-spacing-medium: normal;
+	--letter-spacing-small: -0.015em;
+}
+
 // misc
-[hidden], .dn { display: none; }
-.vh { clip: rect(0 0 0 0);  clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; white-space: nowrap;  width: 1px; }
-.ht { transition: color 0.125s; @media (any-hover: hover) { &:hover { color: var(--color-link-hover); } } }
-.hi { img { filter: grayscale(1); transition: filter 0.125s; } @media (any-hover: hover) { &:hover img { filter: grayscale(0); } } }
-.link { background-image: linear-gradient(to bottom, var(--color-link-underline), var(--color-link-underline)); background-size: 1px 2px; background-repeat: repeat-x; background-position: 0 100%; }
-.sbn { scrollbar-width: none; /* Firefox */ -ms-overflow-style: none;  /* Internet Explorer 10+ */ }
-.sbn::-webkit-scrollbar { width: 0; height: 0; } /* WebKit */
-.ln { list-style: none; }
-.toe { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
-.ttuc { text-transform: uppercase; }
-// universal
-a[aria-current] { text-decoration: underline; text-decoration-thickness: 2px; text-decoration-color: var(--color-text-x-light); }
-img { display: block; width: 100%; height: auto; }
-
-
-//
-.radio,
-.checkbox {
-	& {
-		display: block;
-		width: 100%;
-		cursor: pointer;
-	}
-	&::before {
-		content: "";
-		display: inline-block;
-		width: 0.75rem;
-		height: 0.75rem;
-		line-height: 0.75;
-		margin-right: 0.25rem;
-		margin-bottom: -1px;
-		text-align: center;
-		font-family: monospace;
-		color: var(--color-text-x-light);
-	}
-	&.radio::before {
-		content: none;
-	}
-	&.checkbox::before {
-		content: "+" / "";
+.display-none, [hidden] {
+	display: none;
+}
+.display-hidden {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+.hover-text {
+	transition: color 0.125s;
+	@media (any-hover: hover) {
+		&:hover {
+			color: var(--color-3);
+		}
 	}
 }
-input[type="radio"],
-input[type="checkbox"] {
-	&:checked + .radio::before,
-	&:checked + .checkbox::before {
-		color: var(--color-text-normal);
+.hover-image {
+	img {
+		filter: grayscale(1);
+		transition: filter 0.125s;
 	}
-	&[type="radio"]:checked + .radio::before {
-		content: "✓" / "";
+	@media (any-hover: hover) {
+		&:hover img {
+			filter: grayscale(0);
+		}
 	}
-	&[type="checkbox"]:checked + .checkbox::before {
-		content: "×" / "";
-	}
+}
+a[aria-current] {
+	background-image: linear-gradient(to bottom, var(--color-4), var(--color-4));
+	background-size: 1px 2px;
+	background-repeat: repeat-x;
+	background-position: 0 100%;
+}
+a:focus-visible,
+button:focus-visible,
+input:focus-visible + label {
+	outline: red auto 5px;
+	outline-offset: 0.175em;
+	z-index: 1;
 }
