--- a/src/components/ComplexDate.astro
+++ b/src/components/ComplexDate.astro
@@ -1,13 +1,20 @@
 ---
+import type { ComplexDateFormats, ComplexDateProps } from "@lib/types";
+
+export type Props = {
+	source: ComplexDateProps;
+	length?: "long" | "short";
+	format?: ComplexDateFormats;
+};
+
 const {
 	source,
-	length = "long",
-	format = null,
-	...rest
+	length,
+	format,
 } = Astro.props;
 
-function renderComplexDate(complexDate: { startDate: string; dateFormat: string; endDate: string; hasDuration: boolean; isOngoing: boolean; }) {
-	if (!complexDate || !complexDate?.startDate || !complexDate?.dateFormat) { return null; };
+function renderComplexDate(complexDate: ComplexDateProps) {
+	if (!complexDate || !complexDate?.startDate || (!format && !complexDate?.dateFormat)) { return null; };
 	const startDate = complexDate.startDate;
 	const endDate = complexDate.endDate;
 	const hasDuration = complexDate.hasDuration;
@@ -36,63 +43,64 @@ function renderComplexDate(complexDate: { startDate: string; dateFormat: string;
 					&& startComponents.month === endComponents.month
 					&& startComponents.day === endComponents.day
 				) {
-					return `${startComponents.day} ${formatMonth(startComponents.month)} ${startComponents.year}`;
+					return `<span class="date-baseline">${startComponents.day} ${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 				};
 				if (
 					startComponents.year === endComponents.year
 					&& startComponents.month === endComponents.month
 					&& startComponents.day !== endComponents.day
 				) {
-					return `${startComponents.day} – ${endComponents.day} ${formatMonth(startComponents.month)} ${startComponents.year}`;
+					return `<span class="date-baseline">${startComponents.day}–${endComponents.day} ${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 				};
 				if (
 					startComponents.year === endComponents.year
 					&& startComponents.month !== endComponents.month
 					&& startComponents.day !== endComponents.day
 				) {
-					return `${startComponents.day} ${formatMonth(startComponents.month)} – ${endComponents.day} ${formatMonth(endComponents.month)} ${startComponents.year}`;
+					return `<span class="date-baseline">${startComponents.day} ${formatMonth(startComponents.month)} – ${endComponents.day} ${formatMonth(endComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 				};
-				return `${startComponents.day} ${formatMonth(startComponents.month)} ${startComponents.year} – ${endComponents.day} ${formatMonth(endComponents.month)} ${endComponents.year}`;
+				return `<span class="date-baseline">${startComponents.day} ${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year} – </span><span class="date-baseline">${endComponents.day} ${formatMonth(endComponents.month)} </span><span class="date-year">${endComponents.year}</span>`;
 			};
 			if (hasDuration && isOngoing) {
-				return `${startComponents.day} ${formatMonth(startComponents.month)} ${startComponents.year} – Present`;
+				return `<span class="date-baseline">${startComponents.day} ${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year} – Present</span>`;
 			};
-			return `${startComponents.day} ${formatMonth(startComponents.month)} ${startComponents.year}`;
+			return `<span class="date-baseline">${startComponents.day} ${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 		case "yearWithMonth":
 			if (hasDuration && endDate && !isOngoing) {
 				if (startComponents.year === endComponents.year && startComponents.month === endComponents.month) {
-					return `${formatMonth(startComponents.month)} ${startComponents.year}`;
+					return `<span class="date-baseline">${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 				};
 				if (startComponents.year === endComponents.year) {
-					return `${formatMonth(startComponents.month)} – ${formatMonth(endComponents.month)} ${startComponents.year}`;
+					return `<span class="date-baseline">${formatMonth(startComponents.month)} – ${formatMonth(endComponents.month)} </span><span class="date-year">${startComponents.year}</span>`;
 				};
-				return `${formatMonth(startComponents.month)} ${startComponents.year} – ${formatMonth(endComponents.month)} ${endComponents.year}`;
+				return `<span class="date-baseline">${formatMonth(startComponents.month)} </span><span class="date-year">${startComponents.year} – </span><span class="date-baseline">${formatMonth(endComponents.month)}</span><span class="date-year">${endComponents.year}</span>`;
 			};
 			if (hasDuration && isOngoing) {
-				return `${formatMonth(startComponents.month)} ${startComponents.year} – Present`;
+				return `<span class="date-baseline">${formatMonth(startComponents.month)}</span><span class="date-year">${startComponents.year} – Present</span>`;
 			};
-			return `${formatMonth(startComponents.month)} ${startComponents.year}`;
+			return `<span class="date-baseline">${formatMonth(startComponents.month)}</span><span class="date-year">${startComponents.year}</span>`;
 		case "yearOnly":
 			if (hasDuration && endDate && !isOngoing) {
 				if (startComponents.year === endComponents.year) {
-					return `${startComponents.year}`;
+					return `<span class="date-year">${startComponents.year}</span>`;
 				};
-				return `${startComponents.year} – ${endComponents.year}`;
+				return `<span class="date-year">${startComponents.year} – ${endComponents.year}</span>`;
 			};
 			if (hasDuration && isOngoing) {
-				return `${startComponents.year} – Present`;
+				return `<span class="date-year">${startComponents.year} – Present</span>`;
 			};
-			return `${startComponents.year}`;
+			return `<span class="date-year">${startComponents.year}</span>`;
 		default:
 			return null;
 	};
 };
 ---
 
-<time datetime={source && source.startDate && source.dateFormat ? (
-	source.dateFormat === "yearWithMonth" ? source.startDate.split("-").splice(0, -1).join("-")
-	: source.dateFormat === "yearOnly" ? source.startDate.split("-")[0]
-	: source.startDate
-) : null} {...rest}>
-		{renderComplexDate(source)}
-</time>
+<time
+	datetime={source && source.startDate && source.dateFormat ? (
+		source.dateFormat === "yearWithMonth" ? source.startDate.split("-").splice(0, -1).join("-")
+		: source.dateFormat === "yearOnly" ? source.startDate.split("-")[0]
+		: source.startDate
+	) : null}
+	set:html={renderComplexDate(source)}
+/>
