--- a/src/components/PortableText.astro
+++ b/src/components/PortableText.astro
@@ -1,9 +1,8 @@
 ---
+import PortableTextBlock from "@components/PortableTextCmps/PortableTextBlock.astro";
+import PortableTextImage from "@components/PortableTextCmps/PortableTextImage.astro";
+import PortableTextMark from "@components/PortableTextCmps/PortableTextMark.astro";
 import { PortableText as SanityPortableText } from "astro-portabletext";
-import PortableTextImage from "./PortableTextCmps/PortableTextImage.astro";
-import PortableTextMark from "./PortableTextCmps/PortableTextMark.astro";
-import PortableTextBlock from "./PortableTextCmps/PortableTextBlock.astro";
-import Text from "./Text.astro";
 
 const components = {
 	type: {
@@ -20,7 +19,7 @@ const components = {
 	},
 	block: {
 		normal: PortableTextBlock,
-		// h3 (default)
+		h2: PortableTextBlock,
 		// blockquote (default)
 		note: PortableTextBlock,
 	},
@@ -30,20 +29,80 @@ const components = {
 	},
 };
 
+export type Props = {
+	source: [];
+};
+
 const {
-	// PortableText props
 	source,
-	// Text props
-	small,
-	muted,
 } = Astro.props;
 ---
 
 {source && source.length !== 0
 	? (
-		<Text rich={true} small={small} muted={muted}>
+		<div class="rich-text">
 			<SanityPortableText value={source} components={components} />
-		</Text>
+		</div>
 	)
 	: null
 }
+
+
+<style lang="scss" is:global>
+	.rich-text {
+		line-height: 1.3;
+		h3 {
+			font-weight: var(--font-weight-bold);
+		}
+		blockquote {
+			font-family: var(--font-family-serif);
+			font-size: var(--font-size-medium);
+			padding-inline: 1.5rem;
+			border-inline-start: 1px solid var(--color-4);
+		}
+		.note {
+			font-size: var(--font-size-small);
+			color: var(--color-2);
+		}
+		strong {
+			font-weight: var(--font-weight-bold);
+		}
+		em {
+			font-style: italic;
+		}
+		del {
+			text-decoration: line-through;
+		}
+		sup {
+			font-size: 0.61875em;
+		}
+		li {
+			padding-inline-start: 0.5rem;
+			margin-inline-start: 1rem;
+		}
+		a {
+			background-image: linear-gradient(to bottom, var(--color-4), var(--color-4));
+			background-size: 1px 2px;
+			background-repeat: repeat-x;
+			background-position: 0 100%;
+			color: var(--color-1);
+		}
+		:is(p, h3, blockquote, .note, ul, ol, figure):not(:empty) {
+			&:empty {
+				display: none;
+			}
+			& + :is(p, h3, blockquote, .note, ul, ol):not(:empty):not(blockquote + blockquote) {
+				margin-block-start: 0.5rem;
+			}
+			& + figure {
+				margin-block-start: calc(1.5rem - 0.3em);
+			}
+		}
+		blockquote + blockquote {
+			padding-block-start: 0.5rem;
+		}
+		figure + :is(p, h3, blockquote, .note, ul, ol) {
+			margin-block-start: calc(1.5rem - 0.3em);
+		}
+	}
+</style>
