--- a/src/components/PortableTextCmps/PortableTextBlock.astro
+++ b/src/components/PortableTextCmps/PortableTextBlock.astro
@@ -2,6 +2,7 @@
 import type { Props as $, Block as BlockType } from "astro-portabletext/types";
 import PortableTextNormal from "./PortableTextNormal.astro";
 import PortableTextNote from "./PortableTextNote.astro";
+import PortableTextH2 from "./PortableTextH2.astro";
 import { Block } from "astro-portabletext/components";
 
 export type Props = $<BlockType>;
@@ -11,7 +12,8 @@ const styleIs = (style: string) => style === props.node.style;
 
 const Cmp =
 	styleIs("normal") ? (PortableTextNormal)
-	:styleIs("note") ? (PortableTextNote)
+	: styleIs("h2") ? (PortableTextH2)
+	: styleIs("note") ? (PortableTextNote)
 	: (Block); // fallback to `astro-portabletext`
 ---
 
