--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,32 +1,16 @@
 ---
-import sanityClient from "@root/sanity";
 import Link from "@components/Link.astro";
+import { SiteSettingsGroqQuery } from "@lib/groq";
+import type { SiteSettingsProps } from "@lib/types";
+import sanityClient from "@root/sanity";
+import "@styles/reset.scss";
 import "@styles/global.scss";
 
-interface Props {
+const settings: SiteSettingsProps = await sanityClient.fetch(SiteSettingsGroqQuery);
+
+type Props = {
 	title: string;
-	children: any;
 };
-
-const settings = await sanityClient.fetch(`
-	*[_id == "settings"][0] {
-		title,
-		navigationItems[] -> {
-			title,
-			_id != "homepage" => {
-				slug {
-					current,
-				},
-			},
-			_id == "homepage" => {
-				"slug": {
-					"current": "/",
-				},
-			},
-		},
-	}
-`);
-
 const { title } = Astro.props;
 ---
 
@@ -39,33 +23,42 @@ const { title } = Astro.props;
 		<title>{[title, settings.title]?.filter(Boolean)?.join(" • ")}</title>
 	</head>
 	<body>
-		<header class="fss bgn cxlt">
-			<h1 class="cn">
-				<Link class="ht" href="/">
-					{settings.title}
-				</Link>
-			</h1>
-			<nav class="cn" aria-labelledby="navigation-title">
-				<h2 id="navigation-title" class="dn">Menu</h2>
-				<ul>
-					{settings.navigationItems.map((item: { slug: { current: string; }; title: string; }) => {
-						const slug = item.slug.current;
-						const isCurrent = slug.replaceAll("/", "") === Astro.url.pathname.replaceAll("/", "");
-						return (
-							<li class="toe">
-								<Link class="ht" href={(`/${slug}/`).replace("///", "/")} {...isCurrent && { "aria-current": "page" }}>
-									{item.title}
-								</Link>
-							</li>
-						);
-					})}
-				</ul>
-			</nav>
+		<header id="header-outer">
+			<button id="header-expand" aria-label="Expand menu">
+				<svg class="hover-text" width="24" height="18" viewBox="0 0 24 18" xmlns="http://www.w3.org/2000/svg">
+					<line x1="0" y1="0" x2="24" y2="0"/>
+					<line x1="0" y1="9" x2="24" y2="9"/>
+					<line x1="0" y1="18" x2="24" y2="18"/>
+				</svg>
+			</button>
+			<div id="header-inner">
+				<h1>
+					<Link class="hover-text" href="/">
+						{settings.title}
+					</Link>
+				</h1>
+				<nav id="nav" aria-label="Navigation Menu">
+					<h2 class="display-none">Navigation Menu</h2>
+					<ul>
+						{settings.navigationItems.map((item) => {
+							const slug = item.slug.current;
+							const isCurrent = slug.replaceAll("/", "") === Astro.url.pathname.replaceAll("/", "");
+							return (
+								<li>
+									<Link class="hover-text" href={(`/${slug}/`).replace("///", "/")} {...isCurrent && { "aria-current": "page" }}>
+										{item.title}
+									</Link>
+								</li>
+							);
+						})}
+					</ul>
+				</nav>
+			</div>
 		</header>
-		<main>
+		<main id="main">
 			<slot />
 		</main>
-		<footer class="bgi ci"></footer>
+		<footer id="footer"></footer>
 	</body>
 </html>
 
@@ -74,38 +67,74 @@ const { title } = Astro.props;
 		display: flex;
 		flex-flow: column nowrap;
 		min-height: 100vh;
-		& > * {
-			width: 100%;
-			padding-inline: calc(1.5rem + env(safe-area-inset-left, 0px));
+		--header-height: calc(var(--font-size-medium) + 1rem + 1rem + 1px);
+		--spacing-inline: calc(1.5rem + env(safe-area-inset-left, 0px));
+	}
+	#header-outer {
+		position: sticky;
+		top: 0;
+		z-index: 100;
+		padding-inline: var(--spacing-inline);
+		background: var(--color-7);
+		font-size: var(--font-size-medium);
+	}
+	#header-inner {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: space-between;
+		column-gap: 1.5rem;
+		row-gap: 1rem;
+		padding-block: 1rem;
+		border-block-end: 1px solid var(--color-4);
+	}
+	@media (min-width: 641px) {
+		#header-expand {
+			display: none;
 		}
-		& > header {
-			position: sticky;
-			top: -1.125rem;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			gap: 1.5rem;
-			height: 4rem;
-			border-block-end: 1px solid;
-			z-index: 100;
-			& > * {
-				position: sticky;
-				top: 1rem;
+	}
+	@media (max-width: 640px) {
+		#header-inner {
+			justify-content: center;
+		}
+		#header-expand {
+			all: unset;
+			position: absolute;
+			top: 1rem;
+			left: 1.5rem;
+			width: 1rem;
+			height: 1rem;
+			cursor: pointer;
+			svg {
+				display: block;
+				width: 100%;
+				height: 100%;
+				fill: transparent;
+				stroke: currentColor;
+				stroke-width: 1px;
+				overflow: visible;
+				& > * {
+					vector-effect: non-scaling-stroke;
+				}
 			}
-			ul {
-				list-style: none;
-				display: flex;
-				gap: 1.5rem;
-			}
 		}
-		& > main {
-			flex: 1;
+		#nav {
+			display: none;
+		}
+	}
+	#nav {
+		ul {
+			list-style: none;
 			display: flex;
-			flex-flow: column nowrap;
-			padding-block: 1.5rem;
+			column-gap: 1.5rem;
+			row-gap: 0.75rem;
 		}
-		& > footer {
-			padding: 1.5rem;
-		}
+	}
+	#main {
+		flex: 1;
+		display: flex;
+		flex-flow: column nowrap;
+		margin-inline: var(--spacing-inline);
+		line-height: var(--line-height-large);
 	}
 </style>
