--- a/src/pages/[projects]/[slug].astro
+++ b/src/pages/[projects]/[slug].astro
@@ -1,221 +1,19 @@
 ---
-import sanityClient from "../../sanity";
-import Main from "../../layouts/Main.astro";
-import ProjectInfo from "../../components/ProjectInfo.astro";
-import PageBuilder from "../../components/PageBuilder.astro";
-import { sortDateGroqPartial, portableTextGroqPartial } from "../../lib/groq";
-
-export type TypeProps = {
-	slug: { current: string; };
-	name: string;
-};
-export type CollectionProps = {
-	slug: { current: string; };
-	name: string;
-};
-export type SubjectProps = {
-	slug: { current: string; };
-	name: string;
-};
-export type LocationProps = {
-	name: string;
-	locale: string;
-};
-
-export type Props = {
-	slug: { current: string; };
-	title: string;
-	subtitle?: string;
-	date: {
-		startDate: string;
-		endDate: string;
-		hasDuration: boolean;
-		isOngoing: boolean;
-		dateFormat: string;
-		sortDate: string;
-	};
-	types: TypeProps[];
-	collections?: CollectionProps[];
-	subjects?: SubjectProps[];
-	locations?: LocationProps[];
-	description?: [];
-	image: any;
-	page: {
-		header: [];
-		hasHeaderBodyBorder: boolean;
-		body: [];
-		hasBodyFooterBorder: boolean;
-		footer: [];
-	};
-};
+import ComplexDate from "@components/ComplexDate.astro";
+import Image from "@components/Image.astro";
+import Link from "@components/Link.astro";
+import PageBuilder from "@components/PageBuilder.astro";
+import PortableText from "@components/PortableText.astro";
+import Main from "@layouts/Main.astro";
+import { ProjectGroqQuery, ProjectsListingSlugGroqQuery } from "@lib/groq";
+import { LOCALES } from "@lib/locales";
+import type { ProjectsListingProps, ProjectProps } from "@lib/types";
+import sanityClient from "@root/sanity";
 
 export async function getStaticPaths() {
-	const relatedProjectsGroqPartial = (condition) => (`
-		"projects": *[_type == "project" && _id != ^.^.^.^.^._id && ${condition} && defined(slug)][0...4] {
-			slug {
-				current,
-			},
-			title,
-		},
-	`);
-	const projects = await sanityClient.fetch(`
-		*[_type == "project" && defined(slug) && defined(date.startDate)] {
-			slug {
-				current,
-			},
-			title,
-			subtitle,
-			image {
-				asset,
-				caption[] {
-					${portableTextGroqPartial}
-				},
-			},
-			description[] {
-				${portableTextGroqPartial}
-			},
-			credits[] {
-				${portableTextGroqPartial}
-			},
-			page {
-				header[] {
-					columns[] {
-						_type,
-						ratio,
-						verticalAlignment,
-						_type == "image_" => {
-							captionPlacement,
-							captionPlacement == "left" || captionPlacement == "right" => {
-								imageRatio,
-								captionRatio,
-								captionVerticalAlignment,
-							},
-						},
-					},
-				},
-				hasHeaderBodyBorder,
-				body[] {
-					columns[] {
-						_type,
-						ratio,
-						verticalAlignment,
-						content[] {
-							${portableTextGroqPartial}
-						},
-					},
-				},
-				hasBodyFooterBorder,
-				footer[] {
-					columns[] {
-						_type,
-						ratio,
-						verticalAlignment,
-						_type == "relatedContent" => {
-							byProfiles == true => {
-								"byProfiles": ^.^.^.profiles[] {
-									_ref,
-									${relatedProjectsGroqPartial(`references(^._ref)`)}
-								},
-							},
-							byTypes == true => {
-								"byTypes": ^.^.^.types[] {
-									_ref,
-									${relatedProjectsGroqPartial(`references(^._ref)`)}
-								},
-							},
-							bySubjects == true => {
-								"bySubjects": ^.^.^.subjects[] {
-									_ref,
-									${relatedProjectsGroqPartial(`references(^._ref)`)}
-								},
-							},
-							byClients == true => {
-								"byClients": ^.^.^.clients[] {
-									_ref,
-									${relatedProjectsGroqPartial(`references(^._ref)`)}
-								},
-							},
-							byLocations == true => {
-								"byLocations": ^.^.^.locations[] {
-									_ref,
-									${relatedProjectsGroqPartial(`references(^._ref)`)}
-								},
-							},
-							byYear,
-						},
-					},
-				},
-			},
-			profiles[] -> {
-				name,
-				isDefault,
-			} | order(lower(name) desc),
-			date {
-				startDate,
-				endDate,
-				hasDuration,
-				isOngoing,
-				dateFormat,
-			},
-			types[] -> {
-				name,
-			},
-			subjects[] -> {
-				name,
-			},
-			clients[] -> {
-				name,
-			},
-			locations[] -> {
-				name,
-				locale,
-			},
-			collections[] -> {
-				name,
-				description[] {
-					${portableTextGroqPartial}
-				},
-				"projects": (*[_type == "project" && _id != ^.^._id && references(^._id) && defined(slug)] {
-					slug {
-						current,
-					},
-					image {
-						asset,
-					},
-					"type": types[0] -> name,
-					title,
-					date {
-						startDate,
-						endDate,
-						hasDuration,
-						isOngoing,
-						dateFormat,
-						${sortDateGroqPartial}
-					},
-				}) | order(date.sortDate desc, date.startDate desc, lower(title) asc),
-			},
-			"newsAndPress": (news[] -> {
-				_type,
-				slug {
-					current,
-				},
-				title,
-				date,
-			} + press[] -> {
-				_type,
-				url,
-				date,
-				title,
-				publisher,
-			}) | order(date desc, lower(title) asc),
-		}
-	`);
-	const projectsListing = await sanityClient.fetch(`
-		*[_id == "projectsListing" && defined(slug)][0] {
-			slug,
-		}
-	`);
-	return projects?.map((project: { slug: { current: string; }; }) => {
+	const projects: ProjectProps[]  = await sanityClient.fetch(ProjectGroqQuery);
+	const projectsListing: ProjectsListingProps = await sanityClient.fetch(ProjectsListingSlugGroqQuery);
+	return projects?.map((project) => {
 		return {
 			params: {
 				projects: projectsListing.slug?.current,
@@ -229,87 +27,186 @@ export async function getStaticPaths() {
 };
 
 const project = Astro.props;
+
 ---
 
 <Main title={project.title}>
-	<div class="wrapper">
-		<!-- <aside class="sidebar">
-			<ProjectInfo source={{
-				profiles: project.profiles,
-				types: project.types,
-				subjects: project.subjects,
-				clients: project.clients,
-				locations: project.locations,
-				date: project.date,
-				collections: project.collections,
-				newsAndPress: project.newsAndPress,
-			}} />
-		</aside> -->
-		<article class="project">
-			<div class="header" data-has-border={project.page?.hasHeaderBodyBorder?.toString() || "false"}>
-				<PageBuilder source={project.page?.header} document={project} />
-			</div>
-			<div class="body" data-has-border={project.page?.hasBodyFooterBorder?.toString() || "false"}>
-				<PageBuilder source={project.page?.body} document={project} />
-			</div>
-			<div class="footer">
-				<PageBuilder source={project.page?.footer} document={project} />
-			</div>
-		</article>
-	</div>
+	<article id="project">
+		<header id="project-header">
+			<PageBuilder source={project.page?.header} document={project} baseUrl={Astro.params.projects} />
+		</header>
+		<section id="project-body">
+			<h2 class="display-none">Body</h2>
+			{project.page.doesIncludeDescription && project.description && project.description.length !== 0 && (
+				<div id="description">
+					<PortableText source={project.description} />
+				</div>
+			)}
+			<PageBuilder source={project.page?.body} document={project} />
+		</section>
+		<footer id="project-footer">
+			{project.page.doesIncludeCredits && project.credits && project.credits.length !== 0 && (
+				<section id="credits" aria-label="Credits">
+					<h2 class="display-none">Credits</h2>
+					<PortableText source={project.credits} />
+				</section>
+			)}
+			{project.relatedProjects && project.relatedProjects.length !== 0 && (
+				<section id="related-content" aria-label="Related Content">
+					<h2 id="related-content-title">Related</h2>
+					{project.relatedProjects.map((relatedProject) => (
+						<article class="related-project">
+							<h3 class="related-project-title">
+								<Link href={`/${Astro.params.projects}/${relatedProject.slug.current}/`}>
+									<strong class="related-project-title-baseline">{relatedProject.title?.trim()}{relatedProject.subtitle && (<span class="related-project-title-colon">:&nbsp;</span>)}</strong>{relatedProject.subtitle && (<span class="related-project-subtitle">{relatedProject.subtitle?.trim()}</span>)}
+								</Link>
+							</h3>
+							<!-- <div class="related-project-tagline">
+								<ul>
+									<li><ComplexDate source={relatedProject.date} /></li>
+									{[...(relatedProject.types || []), ...(relatedProject.locations || [])]?.filter(Boolean)?.map((tag) => (
+										<li>{tag.type === "location" ? LOCALES.find((locale) => locale.value === tag.locale)?.title : tag.name?.trim()}</li>
+									))}
+								</ul>
+							</div> -->
+							<div class="related-project-image">
+								<Image source={relatedProject.image} />
+							</div>
+						</article>
+					))}
+				</section>
+			)}
+		</footer>
+	</article>
 </Main>
 
-<style lang="scss">
-	.wrapper {
-		flex: 1;
-		display: flex;
-		flex-flow: row nowrap;
+<style lang="scss" is:global>
+	#project {
+		padding-block-start: 1.5rem;
+		line-height: var(--line-height-large);
 	}
-	.sidebar {
-		position: sticky;
-		top: 4rem;
-		overflow: auto;
-		// width: calc(10rem + 1.5rem + 1.5rem);
-		width: calc(15% + 1.5rem);
-		max-height: calc(100dvh - 4rem - 1.5rem);
-		padding-inline: 1.5rem;
-		margin-inline-end: 1.5rem;
-		margin-inline-start: -1.5rem;
-		border-inline-end: 1px solid var(--color-text-x-light);
-		padding-block: 0.5rem;
-		mask: linear-gradient(to bottom, transparent, black 0.5rem, black calc(100% - 0.5rem), transparent);
-		@media (max-width: 1380px) {
-			width: 1.5rem;
-		}
-	}
-	.project,
-	.body {
+	#project,
+	#project-body {
 		flex: 1;
 		display: flex;
 		flex-flow: column nowrap;
 	}
-	.header, .body {
-		&[data-has-border="true"] {
-			margin-block-end: 1.5rem;
-			border-block-end: 1px solid var(--color-text-x-light);
+	#project-header {
+		display: flex;
+		flex-flow: column nowrap;
+		padding-inline: calc(10% + 1.5rem);
+		padding-block-start: 1.5rem;
+		margin-block-end: 1.5rem;
+		background: var(--color-6);
+		@media (max-width: 1024px) {
+			padding-inline: 1.5rem;
+			margin-inline: -1.5rem;
+			margin-block-start: -1.5rem;
 		}
 	}
-	.header {}
-	.footer {
-		margin-inline: -1.5rem;
-		margin-block-end: -1.5rem;
-		padding-inline: 1.5rem;
-		padding-block-start: 1.5rem;
-		background: var(--color-text-normal);
+	#project-body {
+		margin-inline: calc(10% + 1.5rem);
+		@media (max-width: 1024px) {
+			margin-inline: 0;
+		}
 	}
-	.footer {}
-	.header,
-	.body,
-	.footer > :global(*) {
-		max-width: 80%;
-		margin-inline: auto;
-		@media (max-width: 768px) {
-			max-width: 100%;
+	#description {
+		margin-block-end: 1.5rem;
+		padding-block-end: 1.5rem;
+		border-block-end: 1px solid var(--color-5);
+		font-size: var(--font-size-small);
+		color: var(--color-2);
+	}
+	#credits {
+		margin-inline: calc(10% + 1.5rem);
+		margin-block-end: 1.5rem;
+		padding-block-start: 1.5rem;
+		border-block-start: 1px solid var(--color-5);
+		font-size: var(--font-size-small);
+		color: var(--color-2);
+		@media (max-width: 1024px) {
+			margin-inline: 0;
+		}
+	}
+	#related-content {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 1.5rem;
+		padding-inline: calc(10% + 1.5rem);
+		padding-block: 1.5rem;
+		margin-block-end: 1.5rem;
+		background: var(--color-6);
+		--related-project-columns: 3;
+		@media (max-width: 1024px) {
+			padding-inline: 1.5rem;
+			margin-inline: -1.5rem;
+		}
+		@media (max-width: 896px) {
+			--related-project-columns: 2;
+		}
+		@media (max-width: 640px) {
+			--related-project-columns: 1;
+		}
+	}
+	#related-content-title {
+		flex-basis: 100%;
+		color: var(--color-2);
+	}
+	.related-project {
+		position: relative;
+		flex-basis: calc((100% - ((var(--related-project-columns) - 1) * 1.5rem)) / var(--related-project-columns));
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 0.25rem;
+		height: fit-content;
+		& > * {
+			width: 100%;
+		}
+	}
+	.related-project-image {
+		order: 1;
+		margin-block-end: 0.3em;
+		img {
+			display: block;
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+			aspect-ratio: 16/9;
+		}
+	}
+	.related-project-title {
+		order: 2;
+		// font-size: var(--font-size-medium);
+		a::after {
+			content: "";
+			position: absolute;
+			inset: 0;
+			z-index: 1;
+		}
+	}
+	.related-project-title-baseline {
+		font-weight: var(--font-weight-bold);
+	}
+	.related-project-title-colon {
+		opacity: 0;
+		position: absolute;
+	}
+	.related-project-subtitle {
+		display: block;
+		margin-block-start: 0.25rem;
+	}
+	.related-project-tagline {
+		order: 3;
+		font-size: var(--font-size-small);
+	}
+	.related-project-tagline ul {
+		list-style: none;
+	}
+	.related-project-tagline li {
+		display: inline;
+		&:not(:last-of-type)::after {
+			content: ", ";
 		}
 	}
 </style>
