--- a/src/components/PortableText.astro
+++ b/src/components/PortableText.astro
@@ -51,6 +51,9 @@ const {
 <style lang="scss" is:global>
 	.rich-text {
 		line-height: 1.3;
+		+ .rich-text {
+			margin-block-start: 0.5rem;
+		}
 		h3 {
 			font-weight: var(--font-weight-bold);
 		}
